# dependent-privacy-policy-assurance

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml
data/: scenarios.jsonl
results/: ablation_loss.csv  benign_false_alarm.csv  bootstrap_intervals.csv  casebook.csv  domain_summary.csv  escape_cases.csv  experiment_summary.json  judgments.csv  method_summary.csv  prevalence_workload.csv  recall_by_violation_family.csv  suite_growth.csv  unknown_clause_sensitivity.csv  weight_sensitivity.csv
scripts/: run_dependent_policy_experiment.py  run_experiment.py
src/dependent_policy_assurance/: __init__.py  benchmark.py
