[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dependent-policy-assurance"
version = "1.0.0"
description = "Deterministic benchmark for policy-interaction faults in secure API contracts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["matplotlib>=3.8"]
authors = [
  { name = "Nguyen The-Vinh", email = "vinhnt@ictu.edu.vn" }
]

[project.scripts]
dependent-policy-benchmark = "dependent_policy_assurance.benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]
